--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "author": 
     {
         "name": "DCFApixels",
-        "url": "https://github.com/DCFApixels/DragonECS-Hybrid"
+        "url": "https://github.com/DCFApixels"
     },
     "displayName": "DragonECS-Hybrid",
     "description": "Hybrid extension for DragonECS",
@@ -13,6 +13,10 @@
         "type": "git",
         "url": "https://github.com/DCFApixels/DragonECS-Hybrid.git"
     },
+    "dependencies": {
+        "com.dcfa_pixels.dragonecs": "https://github.com/DCFApixels/DragonECS.git" 
+    },
+
     "keywords":
     [
         "ecs",
